добавил модуль spollers

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,17 @@
   <div class="site-container">
     @include('partials/header.html')
     <main class="main">
-      <h1>Hello</h1>
-      <picture>
-        <source srcset="img/cover.webp" type="image/webp">
-        <img loading="lazy" src="img/cover.jpg" class="image" width="300" height="300" alt="Обложка канала MaxGraph">
-      </picture>
+
+      <div data-spollers class="spollers">
+        <div class="spollers__item">
+          <button type="button" data-spoller class="spollers__title">Заголовок спойлера1</button>
+          <div class="spollers__body">Контент спойлера1</div>
+        </div>
+        <div class="spollers__item">
+          <button type="button" data-spoller class="spollers__title">Заголовок спойлера2</button>
+          <div class="spollers__body">Контент спойлера2</div>
+        </div>
+      </div>
     </main>
     @include('partials/footer.html')
     <!-- @include('html/h1.html') пример include -->
